# llm-policy-engine

./: .dockerignore  .env.development  .env.example  .eslintrc.json  .gitignore  Cargo.toml  Dockerfile  IMPLEMENTATION_STATUS.md  PRODUCTION_GAP_ANALYSIS.md  PRODUCTION_READY.md  README.md  docker-compose.yml  jest.config.js  package.json  tsconfig.json
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
docs/: ADVANCED_ALGORITHMS.md  ALGORITHMS_SUMMARY.md  ALGORITHM_VISUALIZATIONS.md  API_SPECIFICATION.md  ARCHITECTURAL_DELIVERABLES.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DIAGRAMS.md  DOCUMENTATION_INDEX.md  DSL_SPECIFICATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  POLICY_DESIGN.md  POLICY_LIBRARY.md  PSEUDOCODE_ALGORITHMS.md  SEALED_SECRETS_BEST_PRACTICES.md  SEALED_SECRETS_DELIVERABLES.md  SEALED_SECRETS_DOCUMENTATION_COMPLETE.md  SEALED_SECRETS_IMPLEMENTATION_ROADMAP.md  SEALED_SECRETS_INDEX.md  SEALED_SECRETS_QUICK_REFERENCE.md  SPARC_DOCUMENTATION.md  SWARM_EXECUTION_REPORT.md
examples/policies/: budget-policy.yaml  cost-policy.yaml  governance-policy.yaml  security-policy.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
k8s/sealed-secrets/: .gitignore  00-controller.yaml  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  README.md  VERIFICATION_REPORT.md
k8s/sealed-secrets/examples/: 01-database-secret.yaml  02-redis-secret.yaml  03-jwt-secret.yaml  04-secret-rotation-script.sh  05-backup-recovery-guide.md
k8s/sealed-secrets/scripts/: QUICK_START.md  README.md  generate-secrets.sh  seal-secret.sh  validate-sealed-secrets.sh
k8s/sealed-secrets/templates/: database-secret.template.yaml  jwt-secret.template.yaml  redis-secret.template.yaml
plans/: EXECUTIVE_SUMMARY.md  LLM-Policy-Engine-Plan.md  LLM_GOVERNANCE_PATTERNS.md  README.md  RESEARCH_FINDINGS.md  RUST_CRATES_QUICK_REFERENCE.md
proto/: policy.proto
src/: config.rs  index.ts
src/api/: server.ts
src/api/middleware/: auth.ts  error-handler.ts  rate-limit.ts
src/api/routes/: evaluations.ts  policies.ts
src/cache/: cache-manager.ts
src/cache/l1/: memory-cache.ts
src/cache/l2/: redis-cache.ts
src/cli/: index.ts
src/commands/: index.ts  policy.ts
src/core/: index.ts
src/core/__tests__/: policy-engine.test.ts
src/core/engine/: policy-engine.ts
src/core/evaluator/: condition-evaluator.ts
src/core/evaluator/__tests__/: condition-evaluator.test.ts
src/core/parser/: index.ts  json-parser.ts  yaml-parser.ts
src/core/primitives/: cost-calculator.ts  index.ts  pii-detector.ts  token-counter.ts
src/core/primitives/__tests__/: cost-calculator.test.ts  pii-detector.test.ts  token-counter.test.ts
src/core/validator/: schema-validator.ts
src/db/: client.ts  migrate.ts  schema.sql
src/db/models/: api-key-repository.ts  evaluation-repository.ts  policy-repository.ts
src/db/models/__tests__/: api-key-repository.test.ts
src/governance/: index.ts
src/governance/__tests__/: governance-signal-emitter.test.ts
src/governance/contracts/: governance-signals.ts  index.ts
src/governance/emitters/: governance-signal-emitter.ts  index.ts
src/grpc/: server.ts
src/grpc/services/: policy-service.ts
src/integration/: config_manager.rs  mod.rs  observatory.rs  schema_registry.rs
src/integrations/costops/: client.ts
src/integrations/edge/: client.ts
src/integrations/governance/: client.ts
src/integrations/ruvector-service/: client.ts
src/integrations/shield/: client.ts
src/observability/: metrics.ts  tracing.ts
src/synthesis/: builder.ts  types.ts
src/test/: setup.ts
src/types/: config.ts  policy.ts
src/utils/: config.ts  errors.ts  logger.ts
