[workspace]
members = [".", "policy-engine-benchmarks"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["LLM Policy Engine Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/llm-policy-engine/llm-policy-engine"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing (LLM Dev Ops Platform Unified Telemetry Stack)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.28"
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.27"

# Time and date
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Testing
criterion = { version = "0.5", features = ["async_tokio"] }

# LLM Dev Ops Platform Dependencies (compile-time only - Phase 2A)
# Schema Registry - Schema validation and management for LLM operations
schema-registry-core = { git = "https://github.com/LLM-Dev-Ops/schema-registry", branch = "main" }

# Config Manager - Configuration management with RBAC and encryption
llm-config-core = { git = "https://github.com/LLM-Dev-Ops/config-manager", branch = "main" }

# Observatory - Observability and telemetry aggregation
llm-observatory-core = { git = "https://github.com/LLM-Dev-Ops/observatory", branch = "main" }

[package]
name = "llm-policy-engine"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance policy engine for LLM operations"
keywords = ["llm", "policy", "security", "governance", "ai"]
categories = ["authentication", "security", "api-bindings"]

[lib]
name = "llm_policy_engine"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "policy-engine"
path = "src/daemon/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing (LLM Dev Ops Platform Unified Telemetry Stack)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.28"
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.27"

# gRPC (upgraded for opentelemetry-otlp 0.27 compatibility)
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
prost = "0.13"
prost-types = "0.13"

# HTTP
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.1"

# Expression evaluation (CEL)
cel-interpreter = "0.7"

# WASM runtime (sandboxing)
wasmtime = "16.0"

# Caching
lru = "0.12"
parking_lot = "0.12"
moka = { version = "0.12", features = ["future"] }

# Time and date
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.13"
clap = { version = "4.4", features = ["derive", "env"] }

# Cryptography
blake3 = "1.5"
sha2 = "0.10"

# Metrics
prometheus = "0.13"
metrics = "0.21"
metrics-exporter-prometheus = "0.13"

# Redis (optional distributed cache)
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"], optional = true }

# Database (for policy storage)
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "sqlite"], optional = true }

# Policy registry client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Validation
validator = { version = "0.16", features = ["derive"] }
regex = "1.10"

# Rate limiting
governor = "0.6"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Concurrency primitives
arc-swap = "1.6"
dashmap = "5.5"

# CLI
indicatif = "0.17"
console = "0.15"

# LLM Dev Ops Platform Dependencies (compile-time only - Phase 2A)
# These dependencies are added for structural integration. Runtime consumption
# logic and adapters will be implemented in Phase 2B.
schema-registry-core = { workspace = true }
llm-config-core = { workspace = true }
llm-observatory-core = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.4"
mockito = "1.2"
wiremock = "0.6"

[build-dependencies]
tonic-build = "0.12"

[features]
default = ["redis-cache", "postgres-storage"]
redis-cache = ["redis"]
postgres-storage = ["sqlx"]
sqlite-storage = ["sqlx"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

[[bench]]
name = "policy_evaluation"
harness = false

[[bench]]
name = "cache_performance"
harness = false
